// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WebCLI WebCLI Output displays ansi colored content colored 1`] = `
"
Model       Controller       Cloud/Region     Version    SLA          Timestamp
controller  google-us-east1  google/us-east1  2.9-beta1  unsupported  17:44:14Z

Machine  State    DNS             Inst id        Series  AZ          Message
0        started  35.190.153.209  juju-3686b9-0  focal   us-east1-b  RUNNING
"
`;

exports[`WebCLI WebCLI Output displays messages recieved over the websocket 1`] = `
"
Model       Controller       Cloud/Region     Version    SLA          Timestamp
controller  google-us-east1  google/us-east1  2.9-beta1  unsupported  17:44:14Z

Machine  State    DNS             Inst id        Series  AZ          Message
0        started  35.190.153.209  juju-3686b9-0  focal   us-east1-b  RUNNING
"
`;

exports[`WebCLI renders correctly 1`] = `
<div>
  <div
    class="webcli"
  >
    <div
      class="webcli__output"
      style="height: 1px;"
    >
      <div
        aria-hidden="true"
        class="webcli__output-dragarea"
      >
        <div
          class="webcli__output-handle"
        />
      </div>
      <pre
        class="webcli__output-content"
        style="height: 1px;"
      >
        <code />
      </pre>
    </div>
    <div
      class="webcli__input"
    >
      <div
        class="webcli__input-prompt"
      >
        $ juju
      </div>
      <form>
        <input
          autocapitalize="none"
          autocomplete="off"
          autocorrect="off"
          class="webcli__input-input"
          name="command"
          placeholder="enter command"
          spellcheck="false"
          type="text"
        />
      </form>
      <div
        class="webcli__input-help"
      >
        <i
          class="p-icon--help is-light"
          role="button"
          tabindex="0"
        />
      </div>
    </div>
  </div>
</div>
`;
